# ur10e-on-rail

./: CMakeLists.txt  package.xml
launch/: workcell.launch.py
toolpth_refinmnt_config/: CMakeLists.txt  package.xml
toolpth_refinmnt_config/launch/: workcell.launch.py
toolpth_refinmnt_config/urdf/: workcell.urdf  workcell.urdf.xacro
